# Car-and-lane-detection-with-opencv-and-yolo-cpp

./: CMakeLists.txt  README.md  ShowManyImages.h  calibration.xml  lane_detection.h
include/: camera.h  car_detection.h  image_mask.h
src/: ShowManyImages.cpp  camera.cpp  car_detection.cpp  image_mask.cpp  lane_detection.cpp  main.cpp
